[gd_scene load_steps=23 format=2]

[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin.tscn" type="PackedScene" id=1]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRCamera.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://OQ_Toolkit/OQ_LeftController.tscn" type="PackedScene" id=4]
[ext_resource path="res://OQ_Toolkit/OQ_RightController.tscn" type="PackedScene" id=5]
[ext_resource path="res://OQ_Toolkit/OQ_Helpers/OQ_VisibilityToggle.tscn" type="PackedScene" id=6]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin/Feature_VRSimulator.tscn" type="PackedScene" id=7]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin/Locomotion_Stick.tscn" type="PackedScene" id=8]
[ext_resource path="res://network_essentials/NetworkGateway.tscn" type="PackedScene" id=9]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DCanvas.tscn" type="PackedScene" id=10]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRController/Feature_HandModel_Left.tscn" type="PackedScene" id=11]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DLogWindow.tscn" type="PackedScene" id=12]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRController/Feature_UIRayCast.tscn" type="PackedScene" id=13]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRController/Feature_HandModel_Right.tscn" type="PackedScene" id=15]
[ext_resource path="res://AvatarScenes/TunnelVRAvatar.tscn" type="PackedScene" id=16]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 1, 1, 1 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 5, 0.04, 5 )

[sub_resource type="PlaneMesh" id=3]
size = Vector2( 10, 10 )

[sub_resource type="OpenSimplexNoise" id=4]
period = 29.5

[sub_resource type="NoiseTexture" id=5]
noise = SubResource( 4 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.945098, 0.639216, 0.286275, 1 )
albedo_texture = SubResource( 5 )

[node name="Main" type="Spatial"]
script = ExtResource( 3 )
vrenabled = false

[node name="OQ_VisibilityToggle" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, 1.6, -0.65 )

[node name="OQ_UI2DCanvas" parent="OQ_VisibilityToggle" instance=ExtResource( 10 )]
transform = Transform( 0.394103, -0.186382, 0.340659, 0, 0.48537, 0.265557, -0.388313, -0.189161, 0.345739, 0, 0, 0 )

[node name="NetworkGateway" parent="OQ_VisibilityToggle/OQ_UI2DCanvas" instance=ExtResource( 9 )]
margin_top = -2.0
margin_bottom = 233.0

[node name="OQ_ARVROrigin" parent="." instance=ExtResource( 1 )]

[node name="OQ_ARVRCamera" parent="OQ_ARVROrigin" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0958182, 1.4215, 0.0852009 )

[node name="OQ_LeftController" parent="OQ_ARVROrigin" instance=ExtResource( 4 )]

[node name="Feature_HandModel_Left" parent="OQ_ARVROrigin/OQ_LeftController" instance=ExtResource( 11 )]

[node name="RemoteTransform" type="RemoteTransform" parent="OQ_ARVROrigin/OQ_LeftController"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.15, 0.1, -0.15 )
remote_path = NodePath("../../../OQ_VisibilityToggle")

[node name="OQ_RightController" parent="OQ_ARVROrigin" instance=ExtResource( 5 )]

[node name="Feature_HandModel_Right" parent="OQ_ARVROrigin/OQ_RightController" instance=ExtResource( 15 )]

[node name="Feature_UIRayCast" parent="OQ_ARVROrigin/OQ_RightController" instance=ExtResource( 13 )]

[node name="Feature_VRSimulator" parent="OQ_ARVROrigin" instance=ExtResource( 7 )]

[node name="Locomotion_Stick" parent="OQ_ARVROrigin" instance=ExtResource( 8 )]

[node name="RemotePlayers" type="Spatial" parent="."]
script = ExtResource( 16 )

[node name="LocalPlayer" parent="RemotePlayers" instance=ExtResource( 16 )]
visible = false

[node name="Cube" type="MeshInstance" parent="."]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 1.87472, 0.5, -4.428 )
mesh = SubResource( 1 )
material/0 = null

[node name="OQ_UI2DLogWindow" parent="." instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.28324, 0.832338, -0.133368 )

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 2 )

[node name="Floor" type="MeshInstance" parent="StaticBody/CollisionShape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 6 )
